Changes for completeness